--- a/src/components/showcase/Testimonials.astro
+++ b/src/components/showcase/Testimonials.astro
@@ -74,7 +74,8 @@ const carouselItems = [
                         <div
                             class={`carousel-item ${
                                 index === 0 ? "block" : "hidden"
-                            } data-index=${index}`}
+                            }`}
+                            data-index={index}
                         >
                             <div class="mb-3 flex flex-col items-center">
                                 <Image
