--- a/src/pages/showcase.astro
+++ b/src/pages/showcase.astro
@@ -18,7 +18,7 @@ import Layout from "../layouts/Layout.astro";
             class="text-6xl font-bold leading-none tracking-tight text-center"
             transition:animate={fade({ duration: "0.6s" })}
         >
-            <span>Hello World,</span><span class="block text-gradient">I'm John!</span>
+            <span>Hello World,</span><br><span class="text-gradient">I'm John!</span>
         </h1>
         <LongSollyBio />
         <Testimonials />
