--- a/src/components/showcase/PageSpeedInsights.astro
+++ b/src/components/showcase/PageSpeedInsights.astro
@@ -22,6 +22,7 @@ import lightHouseScores from "../../images/svg/lighthouseScores.svg";
                 <Image
                     src={lightHouseScores}
                     alt="Lighthouse scores for jsolly.com: 100 for Performance, Accessibility, Best Practices, and SEO."
+                    height={160}
                     class="h-40 w-auto mx-auto"
                 />
             </figure>
