--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -1,16 +1,12 @@
 ---
-
 ---
 
 <div
   class="prose dark:prose-invert
-          prose-p:text-custom-gray
-          prose-p:text-lg
-          prose-headings:text-custom-offwhite
-          prose-h2:my-3
-          prose-a:text-accent-dark
-          prose-a:no-underline
-          mb-4"
+         prose-headings:text-text-primary
+         prose-p:text-text-secondary
+         prose-headings:mt-2 prose-headings:mb-2
+         prose-h1:mt-0"
 >
   <slot />
 </div>
