--- a/src/components/showcase/Testimonials.astro
+++ b/src/components/showcase/Testimonials.astro
@@ -30,7 +30,7 @@ const carouselItems = [
 		company: "YellowfinBI",
 		year: "2022",
 		quote:
-			"John delivered for customers, documented his findings, and earned the respect of his peers",
+			"John delivered for customers, and earned the respect of his peers",
 	},
 	{
 		avatar: MeredithBeanAvatar,
@@ -74,14 +74,16 @@ const carouselItems = [
                         <div
                             class={`carousel-item ${
                                 index === 0 ? "block" : "hidden"
-                            } data-index=${index}`}
+                            }`}
+                            data-index={index}
                         >
                             <div class="mb-3 flex flex-col items-center">
                                 <Image
-                                    class="rounded-full shadow-lg mb-3 max-w-[150px] max-h-[150px]"
                                     src={item.avatar}
-                                    alt="avatar"
-                                    loading="eager"
+                                    alt={item.name}
+                                    width={150}
+                                    height={150}
+                                    class="rounded-full shadow-lg mb-3"
                                 />
                                 <div class="flex flex-col items-center gap-2 min-h-[160px]">
                                     <div>
@@ -110,7 +112,7 @@ const carouselItems = [
                             // Initialize the first indicator as active on page load
                             <li
                                 class={`w-2.5 h-2.5 cursor-pointer transition-colors duration-300 ease-in-out ${
-                                    index === 0 ? "bg-accent" : "bg-gray-300"
+                                    index === 0 ? "bg-accent-primary" : "bg-gray-300"
                                 }`}
                                 data-carousel-index={index}
                             />
