--- a/src/layouts/MarkdownProjectLayout.astro
+++ b/src/layouts/MarkdownProjectLayout.astro
@@ -1,15 +1,16 @@
 ---
-const { frontmatter, headings, readingTime } = Astro.props;
-import Layout from "./Layout.astro";
 import { Image } from "astro:assets";
-import clockIcon from "../images/svg/clockIcon.svg";
 import TableOfContents from "../components/projects/TableOfContents.astro";
+import clockIcon from "../images/svg/clockIcon.svg";
+import Layout from "./Layout.astro";
+
+const { frontmatter, headings, readingTime } = Astro.props;
 ---
 
 <Layout title={frontmatter.title} description={frontmatter.snippet}>
     <h1 class="text-4xl font-bold leading-tight mb-4">{frontmatter.title}</h1>
 
-    <div class="flex flex-col md:flex-row">
+    <div class="flex flex-col md:flex-row gap-8">
         <div class="flex-grow">
             <div class="max-w-full">
                 <Image
@@ -35,7 +36,7 @@ import TableOfContents from "../components/projects/TableOfContents.astro";
             <slot />
         </div>
 
-        <aside class="hidden lg:block lg:w-1/4 sticky top-5 h-screen ml-2">
+        <aside class="hidden lg:block lg:w-1/3 sticky top-5 h-screen ml-2">
             <TableOfContents headings={headings} />
         </aside>
     </div>
