--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,47 +2,10 @@
 import ContactMe from "../components/ContactMe.astro";
 import Layout from "../layouts/Layout.astro";
 import { Image } from "astro:assets";
+import SocialLinks from "../components/SocialLinks.astro";
 
 // Static Images
 import jsollyImage from "../images/jsolly.webp";
-import linkedInLogo from "../images/social/linkedinLogo.svg";
-import xLogo from "../images/social/xLogo.svg";
-import youtubeLogo from "../images/social/youtubeLogo.png";
-import githubLogo from "../images/social/githubLogo.svg";
-import blogthedataLogo from "../images/social/blogthedataLogo.webp";
-
-const socialLinks = [
-	{
-		href: "https://x.com/_jsolly",
-		icon: xLogo,
-		alt: "X",
-		rel: "me noopener noreferrer",
-	},
-	{
-		href: "https://www.linkedin.com/in/jsolly/",
-		icon: linkedInLogo,
-		alt: "LinkedIn",
-		rel: "me noopener noreferrer",
-	},
-	{
-		href: "https://github.com/jsolly",
-		icon: githubLogo,
-		alt: "Github",
-		rel: "me noopener noreferrer",
-	},
-	{
-		href: "https://www.youtube.com/channel/UCxsK9UorVj2F17DMSXLuSQw",
-		icon: youtubeLogo,
-		alt: "Youtube",
-		rel: "me noopener noreferrer",
-	},
-	{
-		href: "https://blogthedata.com/",
-		icon: blogthedataLogo,
-		alt: "Blogthedata Blog",
-		rel: "me",
-	},
-];
 ---
 
 <Layout
@@ -50,7 +13,7 @@ const socialLinks = [
     description="John Solly is a Senior Geospatial Software Engineer with over a decade of experience in the geospatial industry. Making apps with maps and data."
 >
     <div
-        class="about-section bg-subtle-dark-overlay-lvl-2 text-custom-gray rounded-lg shadow-lg p-6 mx-auto"
+        class="about-section bg-subtle-dark-overlay-lvl-2 text-text rounded-lg shadow-lg p-6 mx-auto"
     >
         <div class="profile flex flex-col md:flex-row items-center">
             <Image
@@ -61,31 +24,15 @@ const socialLinks = [
             />
             <div>
                 <h1
-                    class="text-2xl font-bold text-custom-offwhite leading-none tracking-tight"
+                    class="text-2xl font-bold text-text leading-none tracking-tight"
                 >
                     John Solly
                 </h1>
-                <p class="text-custom-gray leading-relaxed tracking-wide">
+                <p class="text-text leading-relaxed tracking-wide">
                     Senior Software Engineer, Geospatial Developer
                 </p>
                 <div class="social-links flex mt-3">
-                    {
-                        socialLinks.map((link) => (
-                            <a
-                                href={link.href}
-                                rel={link.rel}
-                                target="_blank"
-                                class="social-link mr-4  opacity-80 hover:scale-110 hover:opacity-100 transition-all duration-300 ease-in-out"
-                            >
-                                <Image
-                                    src={link.icon}
-                                    alt={link.alt}
-                                    class="w-8 h-8"
-                                    loading="eager"
-                                />
-                            </a>
-                        ))
-                    }
+                    <SocialLinks />
                 </div>
             </div>
         </div>
