--- a/src/pages/showcase.astro
+++ b/src/pages/showcase.astro
@@ -1,12 +1,11 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import ContactMe from "../components/ContactMe.astro";
-import PageSpeedInsights from "../components/showcase/PageSpeedInsights.astro";
-import LongSollyBio from "../components/showcase/LongSollyBio.astro";
-import Testimonials from "../components/showcase/Testimonials.astro";
-import ShowcaseCards from "../components/showcase/ShowcaseCards.astro";
-
 import { fade } from "astro:transitions";
+import ContactMe from "../components/ContactMe.astro";
+import LongSollyBio from "../components/showcase/LongSollyBio.astro";
+import PageSpeedInsights from "../components/showcase/PageSpeedInsights.astro";
+import ShowcaseCards from "../components/showcase/ShowcaseCards.astro";
+import Testimonials from "../components/showcase/Testimonials.astro";
+import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout
@@ -19,8 +18,7 @@ import { fade } from "astro:transitions";
             class="text-6xl font-bold leading-none tracking-tight text-center"
             transition:animate={fade({ duration: "0.6s" })}
         >
-            <span>Hello World,</span><span class="block text-gradient">
-                I'm John!</span>
+            <span>Hello World,</span><br><span class="text-gradient">I'm John!</span>
         </h1>
         <LongSollyBio />
         <Testimonials />
