--- a/src/components/SocialLinks.astro
+++ b/src/components/SocialLinks.astro
@@ -1,6 +1,12 @@
 ---
 import { Image } from "astro:assets";
 import { socialLinks } from "../content/socialLinks";
+
+export interface Props {
+	imgLoading?: "eager" | "lazy";
+}
+
+const { imgLoading = "lazy" } = Astro.props;
 ---
 
 <nav class="flex gap-6" role="navigation" aria-label="Social media links">
@@ -13,7 +19,7 @@ import { socialLinks } from "../content/socialLinks";
                 class="social-link opacity-80 hover:scale-110 hover:opacity-100 transition-all duration-300 ease-in-out" 
                 aria-label={link.ariaLabel}
             >
-                <Image src={link.icon} alt={link.alt} />
+                <Image src={link.icon} alt={link.alt} loading={imgLoading} />
             </a>
         ))
     }
