--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -88,7 +88,7 @@ import jsollyImage from "../images/jsolly.webp";
                 > as a senior software engineer, contributing to some of NLT's largest
                 and most influential contracts. One of my major projects was a web-based
                 geospatial application for the Census Enterprise Dissemination Services
-                and Consumer Innovation (CEDSCI) division of the the <a
+                and Consumer Innovation (CEDSCI) division of the <a
                     href="https://www.census.gov/"
                     rel="noopener noreferrer"
                     target="_blank">U.S. Census Bureau</a
@@ -137,5 +137,19 @@ import jsollyImage from "../images/jsolly.webp";
 <style>
     .about-content p + p {
         margin-top: 16px;
+    }
+
+    .about-section {
+        background-color: rgba(0, 0, 0, 0.05);
+        color: #171717;
+        border-radius: 0.5rem;
+        box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+        padding: 1.5rem;
+        margin: 0 auto;
+    }
+
+    .social-links {
+        display: flex;
+        margin-top: 0.75rem;
     }
 </style>
