--- a/src/pages/showcase.astro
+++ b/src/pages/showcase.astro
@@ -12,6 +12,7 @@ import Layout from "../layouts/Layout.astro";
     description="Explore the comprehensive showcase of John Solly's impactful work, projects, and contributions to the geospatial and software engineering fields."
 >
     <div class="flex flex-col gap-6">
+        <h1 class="text-3xl font-bold tracking-tight text-text">Showcase</h1>
         <ShortSollyBio />
         <Testimonials />
         <ShowcaseCards />
